--- a/package.json
+++ b/package.json
@@ -47,14 +47,18 @@
     "@nebular/security": "6.0.0",
     "@nebular/theme": "6.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@types/faker": "^5.1.5",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
+    "ckeditor4-angular": "^2.1.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.3",
+    "faker": "^5.2.0",
+    "fishery": "^1.2.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
@@ -62,7 +66,7 @@
     "ng2-ckeditor": "^1.2.9",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
