--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eva-icons": "^1.1.3",
     "faker": "^5.2.0",
     "fishery": "^1.2.0",
+    "font-awesome": "^4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
