--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "^10.0.10",
-    "@angular/cdk": "10.1.1",
+    "@angular/cdk": "^10.0.0",
     "@angular/common": "^10.0.10",
     "@angular/compiler": "^10.0.10",
     "@angular/core": "^10.0.10",
@@ -42,6 +42,10 @@
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@fullcalendar/angular": "^5.5.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
     "@nebular/auth": "6.0.0",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/security": "6.0.0",
@@ -87,6 +91,7 @@
     "@angular/language-service": "10.0.10",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
+    "@schematics/angular": "^10.0.6",
     "@types/d3-color": "1.0.5",
     "@types/googlemaps": "^3.39.3",
     "@types/jasmine": "2.5.54",
