--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@flowjs/flow.js": "^2.14.1",
+    "@flowjs/ng-flow": "^2.7.8",
+    "@flowjs/ngx-flow": "^0.4.6",
     "@nebular/auth": "6.0.0",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/security": "6.0.0",
@@ -59,8 +62,8 @@
     "eva-icons": "^1.1.3",
     "faker": "^5.2.0",
     "fishery": "^1.2.0",
-    "fullcalendar": "^5.5.1",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^5.5.1",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
