--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@fullcalendar/angular": "^5.5.0",
+    "@fullcalendar/core": "^5.5.1",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
     "@nebular/auth": "6.0.0",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/security": "6.0.0",
