--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "angular2-chartjs": "0.4.1",
     "angular4-paystack": "^3.0.0",
     "bootstrap": "4.3.1",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.7.1",
     "ckeditor": "4.7.3",
     "ckeditor4-angular": "^2.1.0",
     "classlist.js": "1.1.20150312",
