--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ngx-echarts": "^4.2.2",
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
+    "nswag": "^13.10.5",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
