--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
+    "serve": "^11.3.2",
     "socicon": "3.0.5",
     "style-loader": "^1.1.3",
     "tinymce": "4.5.7",
