--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "tinymce": "4.5.7",
     "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
+    "validate.js": "^0.13.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
