--- a/package.json
+++ b/package.json
@@ -66,11 +66,14 @@
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.3",
     "faker": "^5.2.0",
+    "file-saver": "^2.0.5",
     "fishery": "^1.2.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.5.1",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng-multiselect-dropdown": "^0.3.4",
@@ -92,6 +95,8 @@
     "typeface-exo": "0.0.22",
     "validate.js": "^0.13.1",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.16.9",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
