--- a/package.json
+++ b/package.json
@@ -131,7 +131,6 @@
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "3.9.7",
-    "tslib": "1.10.0"
+    "typescript": "3.9.7"
   }
 }
