--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@fullcalendar/interaction": "^5.5.0",
     "@fullcalendar/list": "^5.5.0",
     "@nebular/auth": "6.0.0",
+    "@nebular/date-fns": "^7.0.0",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/security": "6.0.0",
     "@nebular/theme": "6.0.0",
@@ -63,6 +64,7 @@
     "ckeditor4-angular": "^2.1.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "date-fns": "^2.22.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.3",
     "faker": "^5.2.0",
